[gd_scene load_steps=18 format=3 uid="uid://rgi6rixs3y25"]

[ext_resource type="Script" uid="uid://cfwfvrm1kvpw7" path="res://scenes/game_areas/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bxv63i2x5vbll" path="res://scenes/camera/camera.tscn" id="2_ifxk0"]
[ext_resource type="Theme" uid="uid://cyr8w7bxof0cp" path="res://Themes/default.tres" id="3_ektsc"]
[ext_resource type="PackedScene" uid="uid://b0c8lgxhmstmc" path="res://scenes/UI/server_browser.tscn" id="3_pbx0h"]
[ext_resource type="Script" uid="uid://p4inwor7gtoo" path="res://addons/godot-console/scripts/console_container.gd" id="3_skvmv"]
[ext_resource type="PackedScene" uid="uid://bbfephk6dceb8" path="res://scenes/UI/join_screen.tscn" id="4_5lbkr"]
[ext_resource type="Script" uid="uid://duwvuyk1neox3" path="res://scenes/game_areas/ping_handler.gd" id="4_pu0uq"]
[ext_resource type="PackedScene" uid="uid://br0rbxgku2jhx" path="res://scenes/UI/server_settings.tscn" id="5_ecrts"]
[ext_resource type="PackedScene" uid="uid://d0ahmpi2kj4et" path="res://scenes/UI/faction_menu.tscn" id="6_ecrts"]
[ext_resource type="PackedScene" uid="uid://bd7v4oeitpic" path="res://scenes/UI/chat.tscn" id="7_ecrts"]
[ext_resource type="PackedScene" uid="uid://dgm6qjjmly3cf" path="res://scenes/UI/player_list.tscn" id="8_ecrts"]
[ext_resource type="PackedScene" uid="uid://bru5npcu535d3" path="res://scenes/UI/main_menu.tscn" id="9_rhv64"]
[ext_resource type="PackedScene" uid="uid://dhb6xwc70nvee" path="res://scenes/faction/faction_container.tscn" id="10_pbx0h"]
[ext_resource type="PackedScene" uid="uid://n271iw0yrgj3" path="res://scenes/UI/settings.tscn" id="10_rhv64"]
[ext_resource type="PackedScene" uid="uid://v3xcbi1vqouh" path="res://scenes/captain/captain_container.tscn" id="11_5lbkr"]

[sub_resource type="LabelSettings" id="LabelSettings_ektsc"]

[sub_resource type="LabelSettings" id="LabelSettings_xeghv"]
font_size = 24
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.694118)

[node name="Main" type="Node3D"]
script = ExtResource("1_o5qli")
build_version = "v0.7"
update_header = "FleetLink Update"

[node name="CameraGimbal" parent="." instance=ExtResource("2_ifxk0")]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)

[node name="Spawners" type="Node3D" parent="."]

[node name="ShipSpawner" type="MultiplayerSpawner" parent="Spawners"]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://cjb05x1lpdjf0")
spawn_path = NodePath("../..")

[node name="StarbaseSpawner" type="MultiplayerSpawner" parent="Spawners"]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://b0gdkau3q2yq")
spawn_path = NodePath("../..")

[node name="SystemSpawner" type="MultiplayerSpawner" parent="Spawners"]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://ckxcwr0xg1oc6")
spawn_path = NodePath("../..")

[node name="WreckSpawner" type="MultiplayerSpawner" parent="Spawners"]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://xj3xulagoow1")
spawn_path = NodePath("../..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Game" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ping" type="Control" parent="UI/Game"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ektsc")
script = ExtResource("4_pu0uq")

[node name="MarginContainer" type="MarginContainer" parent="UI/Game/Ping"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ektsc")
theme_type_variation = &"CustomMarginContainers"

[node name="PingLabel" type="Label" parent="UI/Game/Ping/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Ping: 0ms"
label_settings = SubResource("LabelSettings_ektsc")

[node name="ServerConsoleTip" type="Control" parent="UI/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Game/ServerConsoleTip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ektsc")
theme_type_variation = &"CustomMarginContainers"

[node name="ServerConsoleTip" type="Label" parent="UI/Game/ServerConsoleTip/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Press ` for server console"
label_settings = SubResource("LabelSettings_xeghv")

[node name="MultiplayerUI" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServerBrowser" parent="UI/MultiplayerUI" node_paths=PackedStringArray("server_settings", "main_menu") instance=ExtResource("3_pbx0h")]
unique_name_in_owner = true
visible = false
layout_mode = 1
server_settings = NodePath("../ServerSettings")
main_menu = NodePath("../../MainMenu")

[node name="Joining" parent="UI/MultiplayerUI" instance=ExtResource("4_5lbkr")]
unique_name_in_owner = true
layout_mode = 1

[node name="ServerSettings" parent="UI/MultiplayerUI" node_paths=PackedStringArray("player_list", "chat", "main_menu", "faction_menu", "server_browser") instance=ExtResource("5_ecrts")]
unique_name_in_owner = true
visible = false
layout_mode = 1
player_list = NodePath("../../PlayerList")
chat = NodePath("../../Chat")
main_menu = NodePath("../../MainMenu")
faction_menu = NodePath("../../FactionMenu")
server_browser = NodePath("../ServerBrowser")

[node name="FactionMenu" parent="UI" instance=ExtResource("6_ecrts")]
unique_name_in_owner = true

[node name="Chat" parent="UI" instance=ExtResource("7_ecrts")]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -593.0
offset_top = -324.0
offset_right = 0.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2

[node name="PlayerList" parent="UI" instance=ExtResource("8_ecrts")]
unique_name_in_owner = true

[node name="MainMenu" parent="UI" instance=ExtResource("9_rhv64")]
unique_name_in_owner = true

[node name="Settings" parent="UI" instance=ExtResource("10_rhv64")]
unique_name_in_owner = true
visible = false

[node name="ConsoleContainer" type="VBoxContainer" parent="."]
visible = false
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_skvmv")

[node name="Containers" type="Node3D" parent="."]

[node name="FactionContainer" parent="Containers" instance=ExtResource("10_pbx0h")]
unique_name_in_owner = true

[node name="CaptainContainer" parent="Containers" instance=ExtResource("11_5lbkr")]
unique_name_in_owner = true

[node name="ServerPingInterval" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 50.0

[connection signal="timeout" from="ServerPingInterval" to="." method="_on_server_ping_interval_timeout"]
